--- a/style.css
+++ b/style.css
@@ -56,49 +56,70 @@ nav {
   padding-left: 20px;
   width: 100%;
 }
-.nav-search-icon{
-    max-width: 41px;
-    padding: 8px;
-    background: #ffd64f;
-    border-radius: 0 4px 0;
+.nav-search-icon {
+  max-width: 41px;
+  padding: 8px;
+  background: #ffd64f;
+  border-radius: 0 4px 0;
 }
 
-.nav-language{
-    display: flex;
-    align-items: center;
-    gap: 2px;
-    font-weight: 600;
-    margin-left: 15px;
-
+.nav-language {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  font-weight: 600;
+  margin-left: 15px;
 }
-.nav-text{
-    margin-left: 15px;
-
+.nav-text {
+  margin-left: 15px;
 }
-.nav-text p{
-    font-size: 10px;
+.nav-text p {
+  font-size: 10px;
 }
 
-.nav-text h1{
-    font-size: 14px;
+.nav-text h1 {
+  font-size: 14px;
 }
-.nav-cart{
-    display: flex;
-    align-items: center;
-    margin: 0px 15px;
+.nav-cart {
+  display: flex;
+  align-items: center;
+  margin: 0px 15px;
 }
-.nav-bottom{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    padding: 8px 20px;
-    background: #232f3e;
-    color: #fff;
-    font-size: 15px;
+.nav-bottom {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 8px 20px;
+  background: #232f3e;
+  color: #fff;
+  font-size: 15px;
 }
-.nav-bottom div{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    font-weight: 500;
+.nav-bottom div {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-weight: 500;
+}
+.header-slider ul {
+  display: flex;
+  overflow-y: hidden;
+}
+.header-img {
+  max-width: 100%;
+  mask-image: linear-gradient(to bottom, #000000 50%, transparent 100%);
+}
+.header-slider a {
+  position: absolute;
+  top: 20%;
+  z-index: 1;
+  padding: 5vh 1vw;
+  background: #ffffff4f;
+  color: #0000007b;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+}
+.header-slider{
+
 }
